v1 working with keyboard controls

--- a/index.html.erb
+++ b/index.html.erb
@@ -4,6 +4,10 @@
     <title>Tetris</title>
     <%= javascript_include_tag 'react-with-addons.js' %>
     <%= javascript_include_tag 'tetris' %>
+    <link href='https://code.jquery.com/jquery-2.1.4.min.js' rel='script'>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/opal/0.3.43/opal.min.js' rel='script'>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/opal-jquery/0.0.8/opal-jquery.min.js' rel='script'>
+
     <link href='/css/styles.css' rel='stylesheet'>
   </head>
   <body>
